# src/routes.js
@@ -105,6 +105,14 @@ module.exports = {
       scopes: [MEMBERS.UPDATE, MEMBERS.ALL]
     }
   },
+  '/members/:handle/confirmProfile': {
+    post: {
+      controller: 'MemberController',
+      method: 'confirmProfileData',
+      auth: 'jwt',
+      scopes: [MEMBERS.UPDATE, MEMBERS.ALL]
+    }
+  },
   '/members/:handle/profileDownload': {
     get: {
       controller: 'MemberController',
